<resources>
    <string name="app_name">Erporate e-Learning</string>
    <string name="welcome">Welcome To Erporate Learning</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_txt">Already Have an Account ? Sign In Here</string>
    <string name="sign_in_txt">Not Register ? Sign Up Here</string>
    <string name="logut">Logout</string>
    <string name="welcome_home"> Welcome You are Logged In</string>
    <string name="forgot_pass">Forgot Password ?</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter Your Email</string>
    <string name="your_mail">yourmail@example.com</string>
    <string name="enter_password">Enter Your Password</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="re_password">Re-enter Password</string>
    <string name="first_name">First Name</string>
    <string name="txt_first_name">Enter Your First Name</string>
    <string name="last_name">Last Name</string>
    <string name="txt_last_name">Enter Your Last Name</string>
    <string name="login">Log In</string>
    <string name="register_account">Dont Have an Account ? Sign Up</string>
    <string name="hello"> Hello There </string>
    <string name="txt_register">Please Register Your Account</string>
    <string name="register">Register</string>
    <string name="have_account">Already Have an Account ? Login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_save">Bookmark</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_profile">Profile</string>
    <string name="my_profil">My Profil</string>
    <string name="name">User</string>
    <string name="city">Semarang</string>
    <string name="university">Universitas Diponegoro</string>
    <string name="edit_profil">Edit Profile</string>
    <string name="courses_value"> 0 </string>
    <string name="level_value">0</string>
    <string name="point_value"> 0 </string>
    <string name="course">Courses</string>
    <string name="level">Level</string>
    <string name="point">Points</string>
    <string name="my_courses">My Courses</string>
    <string name="see_all">See All</string>
    <string name="school_university">School/University</string>
    <string name="school_univ_enter">School/University Name</string>
    <string name="gender">Gender</string>
    <string name="choose_gender">Choose Your Gender</string>
    <string name="city_nationality">City Or Nationality</string>
    <string name="city_enter">Enter Your City Or Nation</string>
    <string name="birth">Birth</string>
    <string name="birth_enter">Enter Your Birth Date</string>
    <string name="next">Next</string>
    <string name="title_intro1">Learn New Skill Online</string>
    <string name="title_intro2">Study Everywhere</string>
    <string name="title_intro3">Consult With The Mentor</string>
    <string name="intro1_desc">Tingkatkan Skill-mu secara online dengan berbagai course yang disediakan oleh berbagai mentor yang memadai</string>
    <string name="intro2_desc">Belajar dimanapun dan kapanpun secara Online maupun Offline</string>
    <string name="intro3_desc">Konsultasi dengan mentor mengenai course yang masih belum dipahami</string>
    <string name="tv_skip">Skip</string>
    <string name="tv_quiz_progress">Quiz Progress</string>
    <string name="tv_empty_courses">Your Courses is Empty</string>
    <string name="tv_empty_quiz">Your Quiz is Empty</string>
    <string name="tv_quiz">You haven’t take any Quiz yet</string>
    <string name="tv_hi">Hi, Kamu</string>
    <string name="tv_learn">What would you learn today?</string>
    <string name="tv_course_rec">Course Recommendation</string>
    <string name="tv_top_cat">Top Categories</string>
    <string name="tv_blog">Blogs</string>
    <string name="tv_course_name">Web Programming</string>
    <string name="title_mentor">Mentor</string>
    <string name="tv_mentor_name">Alan</string>
    <string name="tv_expertise">Website Engineer</string>
    <string name="tv_rate">4.8</string>
    <string name="tv_reviews">120</string>
    <string name="title_reviews">Reviews</string>
    <string name="course_desc">In this course we’ll learnt everything from beggining to end, all about Web Programming.</string>
    <string name="difficulty_title">Difficulty :</string>
    <string name="tv_difficulty">Easy</string>
    <string name="range_title">Range :</string>
    <string name="tv_range">Beginner</string>
    <string name="title_quiz_ready">If you Ready, Let’s take the Quiz!</string>
    <string name="to_thequiz_btn">To The Quiz...</string>
    <string name="chapter_txt">Chapter</string>
    <string name="see_more_title">See More</string>
    <string name="number_title">1</string>
    <string name="chapter_title">Learn HTML</string>
    <string name="chapter_desc">Learn the basic of programming</string>
    <string name="mentor_note_txt">Mentor Note</string>
    <string name="mentor_note_desc">Semua konten materi dapat diunduh di bit.ly/AbCDe</string>
    <string name="comment_txt">Comments</string>
    <string name="post_comment_txt">Post a Comment...</string>
    <string name="error_txt">404 Error</string>
    <string name="error_notfound_txt">Your Item Not Found</string>
    <string name="top_search_txt">Top Searches</string>
    <string name="categories_txt">Categories</string>
    <string name="comments_txt">Masih belum paham tentang class dan id.
Kenapa jika saat kita hanya dapat memiliki satu id hanya untuk satu div, sedangkan class bisa digunakan berkali-kali</string>
    <string name="bookmark_txt">Bookmarks</string>
    <string name="congrats_txt">Congrats !</string>
    <string name="correct_txt">Correct Answer</string>
    <string name="out_of_txt">Out Of</string>
    <string name="your_point">Your Point is</string>
    <string name="total_point_tv">0</string>
    <string name="view_answer">View your Answer</string>
    <string name="btn_back_tohome_txt">Back To Home</string>
    <string name="correct_answer_tv"> 0 </string>
    <string name="total_quiz_tv"> 0 </string>
    <string name="quiz_txt">Quiz</string>
    <string name="count_down_txt">00:00</string>
    <string name="question_tv">What is HTML?</string>
    <string name="article_title">Coffee for Programming</string>
    <string name="content_date">05-02-2020</string>
    <string name="categories_title">Intermezzo</string>
    <string name="total_course">12</string>

    <string name="news_content">Having a cup of coffee by your side when you dive into some complicated code is part of a habit. It’s almost like a trigger for me when I’m pondering a complicated problem: As soon as I sit down with a cup of coffee in my hand I know the ideas will start flowing.

It’s also a signal to my coworkers and the people around me that says “Leave me alone, I need to get stuff done now.” It’s definitely a ritual for the other developers I spoke with.</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_title">Divianis[mentor] Replied to your comment</string>
    <string name="notifications_desc">Itu sudah dijelaskan semua di dalam
materi yang saya berikan ...</string>
    <string name="get_started_txt">Get Started</string>
    <string name="logout_txt">Log Out</string>
    <string name="coming_soon_txt">Coming Soon</string>
    <string name="information_txt">Information</string>
    <string name="save_txt">Save</string>
    <string name="setting_txt">Setting</string>
    <string name="account_txt">Account</string>
    <string name="change_password_txt">Change Password</string>
    <string name="support_txt">Support</string>
    <string name="feedback_txt">Feedback</string>
    <string name="help_txt">Help</string>
    <string name="term_txt">Term and conditions</string>
    <string name="privacy_policy_txt">Privacy Policy</string>
    <string name="version">Version 1.0.0</string>
    <string name="edit_txt">Edit</string>
</resources>

