<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_nav"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search_nav"
        android:title="@string/title_activity_search" />

    <item
        android:id="@+id/navigation_saved"
        android:icon="@drawable/bookmark_nav"
        android:title="@string/title_save" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/notif_nav"
        android:title="@string/title_notifications"/>
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profil_nav"
        android:title="@string/title_activity_profile"/>

</menu>
