<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo_erporate" />

    <TextView
        android:id="@+id/hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="19dp"
        android:layout_below="@id/logo"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/circularstd_bold"
        android:text="@string/hello"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/txt_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hello"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/muli"
        android:text="@string/txt_register"
        android:textSize="14dp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:fontFamily="@font/circularstd_bold"
        android:textSize="16dp"
        android:layout_below="@id/txt_register"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="19dp"/>


    <EditText
        android:id="@+id/txt_email"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="13dp"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/muli"
        android:hint="@string/enter_email"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:fontFamily="@font/circularstd_bold"
        android:textSize="16dp"
        android:layout_below="@id/txt_email"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="19dp"/>
    <EditText
        android:id="@+id/txt_password"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:fontFamily="@font/muli"
        android:layout_below="@id/password"
        android:inputType="textPassword"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/re_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/re_password"
        android:fontFamily="@font/circularstd_bold"
        android:textSize="16dp"
        android:layout_below="@id/txt_password"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="19dp"/>
    <EditText
        android:id="@+id/txt_re_password"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:fontFamily="@font/muli"
        android:inputType="textPassword"
        android:layout_below="@id/re_password"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:textSize="16dp"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/register"

        android:background="@drawable/btn_login"
        android:fontFamily="@font/circularstd_bold"
        android:textSize="15dp"
        android:layout_below="@id/txt_re_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:id="@+id/txt_login_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_account"
        android:fontFamily="@font/circularstd_bold"
        android:textSize="16dp"
        android:layout_below="@id/btn_register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/dark"/>

</RelativeLayout>