<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/back_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btnback"
            android:layout_marginLeft="35dp"
            android:contentDescription="TODO" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profil"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/circularstd_bold"
            android:textColor="@color/dark"
            android:textSize="16dp"/>

    </RelativeLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/frame_1"
                android:layout_below="@id/back_id"
                android:layout_marginTop="30dp"
                android:layout_centerHorizontal="true">



                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/img_default_profile"
                    app:civ_border_width="2dp"
                    app:civ_border_color="#FF000000"
                    android:layout_below="@id/back_id"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    />


                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:scaleType="center"
                        android:src="@drawable/baseline_add_a_photo_black_48"
                        android:layout_centerInParent="true"
                        />
            </FrameLayout>



    <TextView
        android:id="@+id/fname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/frame_1"
        android:text="@string/first_name"
        android:fontFamily="@font/circularstd_bold"
        android:textSize="14dp"
        android:textColor="@color/dark"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"/>
    <EditText
        android:id="@+id/enter_fname"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/muli"
        android:hint="@string/txt_first_name"
        android:textSize="12dp"
        android:layout_below="@+id/fname"
        android:layout_marginLeft="26dp"/>
    <TextView
        android:id="@+id/lname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/enter_fname"
        android:text="@string/last_name"
        android:fontFamily="@font/circularstd_bold"
        android:textSize="14dp"
        android:textColor="@color/dark"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="4dp"/>
    <EditText
        android:id="@+id/enter_lname"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/txt_last_name"
        android:textSize="12dp"
        android:fontFamily="@font/muli"
        android:layout_below="@+id/lname"
        android:layout_marginLeft="26dp"/>
    <TextView
        android:id="@+id/univ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/enter_lname"
        android:text="@string/school_university"
        android:fontFamily="@font/circularstd_bold"
        android:textSize="14dp"
        android:textColor="@color/dark"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="4dp"/>
    <EditText
        android:id="@+id/enter_univ"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/school_univ_enter"
        android:textSize="12dp"
        android:fontFamily="@font/muli"
        android:layout_below="@+id/univ"
        android:layout_marginLeft="26dp"/>

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/enter_univ"
        android:text="@string/gender"
        android:fontFamily="@font/circularstd_bold"
        android:textSize="14dp"
        android:textColor="@color/dark"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_gender"
        android:text="@string/city_nationality"
        android:fontFamily="@font/circularstd_bold"
        android:textSize="14dp"
        android:textColor="@color/dark"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="4dp"/>
    <EditText
        android:id="@+id/enter_city"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/school_univ_enter"
        android:textSize="12dp"
        android:fontFamily="@font/muli"
        android:layout_below="@+id/city"
        android:layout_marginLeft="26dp"/>
    <TextView
        android:id="@+id/birth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/enter_city"
        android:text="@string/birth"
        android:fontFamily="@font/circularstd_bold"
        android:textSize="14dp"
        android:textColor="@color/dark"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="4dp"/>


    <EditText
        android:id="@+id/enter_birth"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/birth_enter"
        android:textSize="12dp"
        android:fontFamily="@font/muli"
        android:layout_below="@+id/birth"
        android:layout_marginLeft="26dp"
        android:editable="false"/>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_txt"
        android:layout_marginBottom="30dp"
        android:layout_below="@id/enter_birth"
        android:background="@drawable/rectangle_173"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"/>

            <Button
                android:id="@+id/btn_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_txt"
                android:layout_marginBottom="30dp"
                android:layout_below="@id/enter_birth"
                android:background="@drawable/rectangle_173"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"/>

    <Spinner
        android:id="@+id/spinner_gender"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_below="@id/gender"
        android:autofillHints="@string/choose_gender"
        android:layout_marginLeft="30dp"
        android:spinnerMode="dropdown"

        />

        </RelativeLayout>



    </ScrollView>

</RelativeLayout>