<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.erporate.e_learning.homepage.HomeActivity"
        android:label="@string/title_home"
        tools:layout="@layout/activity_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.erporate.e_learning.homepage.BookmarkActivity"
        android:label="@string/title_activity_home"
        tools:layout="@layout/activity_bookmark" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.erporate.e_learning.homepage.NotificationsActivity"
        android:label="@string/title_notifications"
        tools:layout="@layout/activity_notifications" />
</navigation>