<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundlogin"
    tools:context=".Login">



    <ImageView
        android:id="@+id/logo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo_erporate" />

    <TextView
        android:id="@+id/txt_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/circularstd_bold"
        android:text="@string/welcome"
        android:layout_below="@id/logo"
        android:textSize="18dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="19dp"/>


    <TextView
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_welcome"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="21dp"
        android:fontFamily="@font/circularstd_bold"
        android:text="@string/email"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/email_enter"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_email"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:fontFamily="@font/circularstd_bold"
        android:layout_below="@id/email_enter"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="20dp"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/password_enter"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/txt_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_pass"
        android:fontFamily="@font/circularstd_bold"
        android:layout_below="@id/password_enter"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textSize="14dp" />


    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_forgot"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_login"
        android:fontFamily="@font/circularstd_bold"
        android:text="@string/login"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/txt_regis_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_account"
        android:fontFamily="@font/circularstd_bold"
        android:textSize="14dp"
        android:layout_below="@id/btn_sign_in"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/dark"/>

    <ImageView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/line"
        android:layout_below="@id/txt_regis_account"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        />

    <Button
        android:id="@+id/sign_in_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_google"
        android:layout_below="@id/or"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>




</RelativeLayout>




