<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <FrameLayout
        android:id="@+id/frame_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/crown_1"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:src="@drawable/tes"
        app:civ_border_color="@color/blue"
        app:civ_border_overlay="true"
        app:civ_border_width="20dp" />

    </FrameLayout>

    <TextView
        android:id="@+id/congrats_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/congrats_txt"
        android:textColor="@color/blue"
        android:fontFamily="@font/circularstd_bold"
        android:textSize="16dp"
        android:layout_below="@id/frame_1"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:id="@+id/lin1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/congrats_txt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        >

    <TextView
        android:id="@+id/correct_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correct_txt"
        android:layout_below="@id/congrats_txt"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/circularstd_bold"
        android:textSize="16dp"/>

        <TextView
            android:id="@+id/corroct_answer_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correct_answer_tv"
            android:layout_marginLeft="6dp"
            android:fontFamily="@font/circularstd_bold"
            android:textSize="16dp"
            />

        <TextView
            android:id="@+id/out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/out_of_txt"
            android:layout_marginLeft="6dp"
            android:fontFamily="@font/circularstd_bold"
            android:textSize="16dp"
            />

        <TextView
            android:id="@+id/total_quiz_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_quiz_tv"
            android:layout_marginLeft="6dp"
            android:fontFamily="@font/circularstd_bold"
            android:textSize="16dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lin1"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/point_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_point"
            android:layout_marginLeft="6dp"
            android:fontFamily="@font/circularstd_bold"
            android:textColor="@color/dark"
            android:textSize="16dp"
            />

        <TextView
            android:id="@+id/points_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_point_tv"
            android:layout_marginLeft="6dp"
            android:fontFamily="@font/circularstd_bold"
            android:textColor="@color/dark"
            android:textSize="16dp"
            />
    </LinearLayout>


    <Button
        android:id="@+id/btn_view_answer"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:background="@drawable/bookmark_border"
        android:layout_below="@id/lin2"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/view_answer"
        android:fontFamily="@font/circularstd_bold"
        android:textSize="14dp"
        />

    <Button
        android:id="@+id/back_home"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:background="@drawable/btn_login"
        android:layout_below="@id/btn_view_answer"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_back_tohome_txt"
        android:fontFamily="@font/circularstd_bold"
        android:textSize="14dp"/>

    <ImageView
        android:id="@+id/img_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/score_image"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"/>


</RelativeLayout>