<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/lin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chapter_title"
        android:textColor="@color/dark"
        android:textSize="16dp"
        android:fontFamily="@font/circularstd_medium"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"/>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_all"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:textColor="@color/blue"
        />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/lin1">

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lv_chapter"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_more_title"
        android:layout_below="@id/lin2"
        android:fontFamily="@font/muli"
        android:textColor="@color/blue"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>